[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.6"
anyhow = "1.0.75"
dotenv = "0.15.0"
itertools = "0.12.0"
num = "0.4.1"
reqwest = { version = "0.11.22", features = ["blocking"] }
time = { version = "0.3.30", features = ["local-offset"] }
